test/tests/errors/error-function-incorrect-param2.sm
// true
// false
// false
/**/
/**/

program {
    func x(): string {
        "t"
    }

    output x(1);
}